@@ -246,4 +246,6 @@ Changes since version 1.2-0
 
 	* a THANKS file is added
 	
-	
+	* the `[.pdata.frame` function is modified so that [, j] returns a
+	pseries and not a pdata.frame when j is a single integer, and a
+	backward compatibility feature is added for the "index" attribute
